<resources>
    <string name="app_name">SunCoinMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list_exception">EmptyListException</string>
    <string name="error_network_call">Error, network call!!</string>
    <string name="empty_data_coming_error">Empty Data From Server!!</string>
    <string name="error_network_call_internet_connection">Could not reach server, check your internet connection!!</string>
    <string name="search_coins">Search Coins</string>
    <string name="search">Search</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="sign_in_now">Sign in Now</string>
    <string name="you_already_have_an_account">You already have an Account ?</string>
    <string name="login_expired">Your login time has expired. Login again</string>
    <string name="changed_refresh_time">Successfully Updated</string>

</resources>